P2/Arrays/03/var/archive/xmlreports/0/0/1/000040
Content-type: text/xml

<?xml version="1.0" encoding="utf-8"?>
<testing-report run-id="40" judge-id="14" status="CE" scoring="ACM" run-tests="0" contest-id="203" compile-error="yes" >
  <uuid>98e9e5ed-5e9a-42f8-b01d-337b3c59e252</uuid>
  <compiler_output>000040.cpp:15:7: error: expected ';' after expression
                        ++r
                           ^
                           ;
1 error generated.
</compiler_output>
</testing-report>
